Update minimum support Java version from 8 to 11. Fixes #2798
Signed-off-by: Andriy Redko <andriy.redko@aiven.io>